# rat-bench

./: README.md  generator.py  install_correctmatch.py  main.py  pyproject.toml
benchmark/: level_1.jsonl
benchmark/chinese/: level_3.jsonl
benchmark/spanish/: level_3.jsonl
data/: 100_profiles.csv  PUMS2010_metadata.json  population_sample.csv  puma_to_zcta.pickle
data/maps/: CIT_map.pickle  DOB-Day_map.pickle  DOB-Month_map.pickle  DOB-Year_map.pickle  DOB_map.pickle  ESR_map.pickle  MAR_map.pickle  OCCP_map.pickle  OCCP_type_map.pickle  PUMA_FULL_map.pickle  RAC2P_map.pickle  SCHL_map.pickle  SEX_map.pickle  ST_map.pickle  zip_to_puma.pickle
pii_benchmark/: anonymize.py  attack.py  compute_utility.py  credentials_example.py  evaluation.py  prompts.py  uniqueness.py  utility.py  utils.py
pii_benchmark/anonymizers/: anonymizer.py  anthropic.py  azure.py  clio.py  dp_prompt_gpt.py  flair.py  gemini.py  get_anonymizers.py  gliner.py  gpt_anon.py  iterative.py  llama.py  llamaclio.py  llamarescriber.py  madlib.py  presidio.py  scrubadub.py  tem.py  textwash.py  textwash_config.py  uniner.py
pii_benchmark/anonymizers/anon_prompts/: clio_auditing_1.txt  clio_auditing_2.txt  (+4 more)
pii_benchmark/attackers/: attacker.py  gemini.py  get_attacker.py  gpt.py  llama.py
scripts/anonymize/: level_1.sh  level_2.sh  level_3.sh
scripts/attack/: level_1.sh  level_2.sh  level_3.sh
scripts/generate/: level_1.sh  level_2.sh  level_3.sh
synthetic_data_generation/: api.py  data.py  direct_identifier_generation.ipynb  direct_identifiers.py  prompts.py  utils.py
